--- a/styles.css
+++ b/styles.css
@@ -1,134 +1,121 @@
-/* variables */
-
-
-/* reset */
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
+/* stylelint-disable*/
+a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}html{line-height:1}body{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
+/* stylelint-enable */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
+/*
+base-font-size: 27
+ratio: 1.5
+*/
 
-/* base styles */
+/* Begin site styles below */
+
 html {
-    font-size: 10px;
-    line-height: 24px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  padding: 24px;
 }
 
 
-/* fonts */
-
-
-/* mobile styles */
-
-    h1{
-        font-size: 2.5rem;
-        text-align: center;
-    }
-    h2{
-        font-size: 2em;
-        text-align: left;
-    }
-    h3{
-        font-size: 1.5em;
-    }
-    #contact a{
-        text-decoration: none;
-    }
-    p{
-        margin: 10px;
-    }
-
-
-    .grid-container{
-        display: grid;
-        background-color: ;
-        grid-template-rows: 1fr;
-        grid-gap: 8px;
-    }
-
-    .grid-container li{
-        padding: 3px;
-        margin: 0px;
-        background-color:lavender;
-        overflow-wrap: break-word;
-    }
-    .grid-container a{
-        overflow-wrap: break-word;
-    }
-
-    .navigation{
-        display: grid;
-        grid-template-rows: 1fr 1fr;
-        text-align: center;
-        margin: 10px;
-    }
-    .navigation a{
-        font-size: 14px;
-        padding: 9px;
-        margin: 5px;
-        background-color:lavender;
-    }
-
-@media screen and (mid-width: 144px) {
-
+h1 {
+  font-size: 91.125px; /** 18 x 5.063 **/
+  line-height: 121.512px; /* 24 x 5.063 */
+  margin: 22.488px; /*  */
+  text-align: center;
 }
 
-/* small tablet styles */
-@media screen and (min-width: 440px) {
-    html {
-        font-size: 18px;
-    }
+h2 {
+  font-size: 40.5px; /** 18 x 2.25 **/
+  line-height: 54px; /** 24 x 2.25**/
+  padding-bottom: 18px;
 }
 
-/* large tablets & laptops styles */
-@media screen and (mid-width: 960px) {
-    
+h3 {
+  font-size: 27px; /** 27 x 1.5 **/
+  line-height: 36px; /** 24 * 1.5 **/
+  padding-top: 18px;
+  padding-bottom: 18px;
 }
 
-/* desktop styles */
-@media screen and (mid-width: 1200px) {
-    
+.bulleted-list {
+  list-style-type: disc;
 }
+
+.section-content-container {
+  padding-left: 90px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.embellishment-container li {
+  background-color: ;
+  font-size: 40.5px; /** 18 x 2.25 **/
+  line-height: 54px; /** 24 x 2.25**/
+  padding: 17px;
+  text-align: center;
+}
+
+
+.navigation {
+  text-align: center;
+  padding-bottom: 24px;
+}
+
+.references  {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+footer {
+  padding-top: 24px;
+}
+/*
+
+.embellishment-container {
+  display: grid;
+  grid-template-rows: 54px 54px 54px;
+  text-align: center;
+}
+
+.embellishment-container li {
+  background-color: yellow;
+  font-size: 40.5px; 
+}
+
+/*
+.navigation {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  text-align: center;
+  margin: 10pt;
+}
+
+.navigation a {
+  font-size: 14pt;
+  padding: 9pt;
+  margin: 5pt;
+  background-color: lavender;
+} */
+
+/** A quick baseline grid overlay using css+svg. Inspired by [Basehold.it](https://basehold.it/). @author leshido */
+.g body { position: relative; }
+
+.g body::after { 
+  background: url('data:image/svg+xml;utf8,<svg height="24" width="1" xmlns="http://www.w3.org/2000/svg"><rect width="1" height="0.5" style="fill:rgba(255, 0, 0, 255)" /></svg>') repeat top left; 
+  content: ""; 
+  display: block; 
+  pointer-events: none; 
+  top: 0; 
+  right: 0; 
+  bottom: 0; 
+  left: 0; 
+  z-index: 9999; 
+  position: absolute; }
+
+.g body:active::after { display: none; }
