--- a/styles.css
+++ b/styles.css
@@ -6,116 +6,222 @@
 a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}html{line-height:1}body{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 /* stylelint-enable */
 
-/*
-base-font-size: 27
-ratio: 1.5
-*/
-
-/* Begin site styles below */
-
 html {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 18px;
   line-height: 24px;
-  padding: 24px;
+  padding: 18px;
+  background-color: #BBBBF1;
+  overflow-wrap: anywhere;
 }
 
-
-h1 {
-  font-size: 91.125px; /** 18 x 5.063 **/
-  line-height: 121.512px; /* 24 x 5.063 */
-  margin: 22.488px; /*  */
-  text-align: center;
+.picture-container {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-h2 {
-  font-size: 40.5px; /** 18 x 2.25 **/
-  line-height: 54px; /** 24 x 2.25**/
-  padding-bottom: 18px;
+img {
+  max-width: 100%;
 }
 
-h3 {
-  font-size: 27px; /** 27 x 1.5 **/
-  line-height: 36px; /** 24 * 1.5 **/
-  padding-top: 18px;
-  padding-bottom: 18px;
-}
-
-.bulleted-list {
-  list-style-type: disc;
-}
-
-.section-content-container {
-  padding-left: 90px;
+.color {
+  background-color: lavender;
 }
 
 a {
   text-decoration: none;
 }
 
-.embellishment-container li {
-  background-color: ;
-  font-size: 40.5px; /** 18 x 2.25 **/
-  line-height: 54px; /** 24 x 2.25**/
-  padding: 17px;
-  text-align: center;
-}
-
-
-.navigation {
+h1 {
+  font-size: 1.5em;
+  line-height: 36px;
   text-align: center;
   padding-bottom: 24px;
 }
 
-.references  {
+h2 {
+  font-size: 1.5em; /** 18 x 2.25 **/
+  line-height: 36px; /** 24 x 2.25**/
+  padding-bottom: 24px;
+}
+
+h3 {
+  font-weight: bolder;
+}
+
+#objective p {
+  font-size: 0.677em;
+  padding-left: 12px;
+  background-color: lavender;
+}
+
+.section-content-container {
+  padding-left: 12px;
+  font-size: 0.677em;
+}
+
+#contact {
+  font-size: 0.677em;
+}
+
+.navigation {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr ;
+  text-align: center;
+}
+
+.navigation a {
+  font-size: 18px;
+  margin-bottom: 24px;
+  padding-bottom: 12px;
+  padding-top: 12px;
+  background-color: lavender;
+}
+
+.bulleted-list {
+  list-style-type: disc;
+}
+
+.bulleted-list .term {
+  font-size: 8px;
+  font-weight: bold;
+}
+
+.embellishment-container {
+  padding-bottom: 24px;
+}
+
+.embellishment-container li {
+  background-color: lavender;
+  text-align: center;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
+.references {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  font-size: 0.444em;
+  line-height: 10.656px;
+}
+
+.references ul {
+  margin-bottom: 12px;
+  margin-top: 12px;
 }
 
 footer {
   padding-top: 24px;
 }
-/*
 
-.embellishment-container {
-  display: grid;
-  grid-template-rows: 54px 54px 54px;
-  text-align: center;
+@media screen and (min-width: 200px) {
+  h1 {
+    font-size: 2.25em;
+  }
 }
 
-.embellishment-container li {
-  background-color: yellow;
-  font-size: 40.5px; 
+@media screen and (min-width: 310px) {
+  h1 {
+    font-size: 3.797em;
+    line-height: 54px;
+  }
 }
 
-/*
-.navigation {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  text-align: center;
-  margin: 10pt;
+@media screen and (min-width: 441px) {
+  h1 {
+    font-size: 91.125px; /** 18 x 5.063 **/
+    line-height: 121.512px; /* 24 x 5.063 */
+    margin: 22.488px;
+  }
+
+  h2 {
+    font-size: 40.5px; /** 18 x 2.25 **/
+    line-height: 54px; /** 24 x 2.25**/
+    padding-bottom: 18px;
+  }
+
+  h3 {
+    font-size: 27px; /** 27 x 1.5 **/
+    line-height: 36px; /** 24 * 1.5 **/
+    padding-top: 18px;
+    padding-bottom: 18px;
+  }
+
+  img {
+    max-width: 50vw;
+  }
+
+  .bulleted-list {
+    list-style-type: disc;
+  }
+
+  .section-content-container {
+    padding-left: 90px;
+  }
+
+  .section-content-container.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .embellishment-container li {
+    font-size: 40.5px; /** 18 x 2.25 **/
+    line-height: 54px; /** 24 x 2.25**/
+    padding: 17px;
+    text-align: center;
+    margin-right: 30%;
+    margin-left: 30%;
+  }
+
+  .references {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    font-size: 1rem;
+    line-height: 24px;
+  }
+
+  .references ul {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .navigation {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+    padding-bottom: 0px;
+  }
+
+  .navigation a {
+    font-size: 18px;
+    margin-right: 24px;
+    margin-left: 24px;
+    margin-bottom: 0px;
+    padding-bottom: 12px;
+    padding-top: 12px;
+  }
+
+  #useless-paragraph {
+    margin: 1in;
+  }
 }
-
-.navigation a {
-  font-size: 14pt;
-  padding: 9pt;
-  margin: 5pt;
-  background-color: lavender;
-} */
-
 /** A quick baseline grid overlay using css+svg. Inspired by [Basehold.it](https://basehold.it/). @author leshido */
+/*
 .g body { position: relative; }
 
-.g body::after { 
-  background: url('data:image/svg+xml;utf8,<svg height="24" width="1" xmlns="http://www.w3.org/2000/svg"><rect width="1" height="0.5" style="fill:rgba(255, 0, 0, 255)" /></svg>') repeat top left; 
-  content: ""; 
-  display: block; 
-  pointer-events: none; 
-  top: 0; 
-  right: 0; 
-  bottom: 0; 
-  left: 0; 
-  z-index: 9999; 
-  position: absolute; }
+.g body::after {
+  background: url('data:image/svg+xml;utf8,<svg height="24" width="1" xmlns="http://www.w3.org/2000/svg"><rect width="1" height="0.5" style="fill:rgba(255, 0, 0, 255)" /></svg>') repeat top left;
+  content: "";
+  display: block;
+  pointer-events: none;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9999;
+  position: absolute;
+}
 
 .g body:active::after { display: none; }
+*/
